# netpgp-cmake

./: .gitignore  CMakeLists.txt
src/lib/: CMakeLists.txt  config.h.in
src/libbn/: CMakeLists.txt
src/libdigest/: CMakeLists.txt
src/libmj/: CMakeLists.txt
src/libverify/: CMakeLists.txt
src/netpgp/: CMakeLists.txt
src/netpgpkeys/: CMakeLists.txt
src/netpgpverify/: CMakeLists.txt
